# codexos-minios

./: .gitignore  CODEXOS-BUILD-GUIDE.md  Dockerfile.build-iso  TODO.md  agent_server.py  build-iso.sh  requirements.txt  root-foder-project.md  tmp_hello.c
.agents/memory/: MEMORY.md  codexos-desktop.md  minios-integration.md
.github/workflows/: build-iso.yml
CodexSystem/: .replit  ai-engine.js  app.js  codexmind.css  codexmind.html  codexmind.js  control-panel.css  control-panel.html  control-panel.js  desktop.css  desktop.html  desktop.js  index.html  rag-engine.js  replit.md  server.py  style.css  taskbar.css  taskbar.js  web-search.js
CodexSystem/.agents/memory/: MEMORY.md  codexsystem-arch.md
CodexSystem/CodexMind AI/: 3055.js  395.js  9696.js  aria.js  blacklist.js  handleReloadUI.js
CodexSystem/CodexMind AI/agent/.model_lab/cli/: README.md  pyproject.toml
CodexSystem/CodexMind AI/agent/.model_lab/cli/cli_package/: modellab.py
CodexSystem/CodexMind AI/src/root/: Animations.css  Aria.css  components.css  fonts.css  utilities.css
CodexSystem/CodexMind_System/: index.html
CodexSystem/CodexMind_System/modules/css/: button.css  common.css  input.css  (+1 more)
CodexSystem/attached_assets/: CodexMindAI_main_chat_index_1782713999230.html  index_1782713145686.html
CodexSystem/resources/: ab_tests.json  default_partner_content.json  doh_providers.json  domain_suggestions.json  partner_speeddials.json  purchases-schemas.json  siteprefs.json  skip_button_sites.json  specific_keywords.json
dev/: agentdev-run.bat  agentdev-run.sh
tools/: test_xmlstarlet.sh
(+74 files in other folders)
