[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modellab"
version = "0.1.0"
description = "Model Lab extension CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
modellab = "cli_package.modellab:main"
